tests/error/0023.exl
let
    b = a,
    a = b
        ^ERROR
in
    a
